--- a/_showcases/LAMACLIMA_dummy.html
+++ b/_showcases/LAMACLIMA_dummy.html
@@ -1,8 +1,9 @@
 ---
+categories: showcases
 title: LAMACLIMA
-permalink: /showcase/lamaclimascenarios
+description: This is a test
 image: assets/images/generic/pic02.jpg
-nav-menu: false
+nav-menu: true
 published: true
 show_tile: false
 ---
