--- a/_showcases/LAMACLIMA_dummy.html
+++ b/_showcases/LAMACLIMA_dummy.html
@@ -1,7 +1,8 @@
 ---
 categories: showcases
-title: LAMACLIMA
-description: This is a test
+title: Dummy example
+description: "This is a test showcase. It does not contain any sensible information but 
+              is just meant as an example how a showcase could look like!"
 image: assets/images/generic/pic02.jpg
 nav-menu: true
 published: true
