updated lamaclima showcase description

--- a/_showcases/lamaclimascenarios.html
+++ b/_showcases/lamaclimascenarios.html
@@ -1,8 +1,9 @@
 ---
 categories: showcases
-title: LAMACLIMA scenarios
-description: This is an application which came out of the LAMACLIMA project.
-image: assets/images/generic/pic01.jpg
+title: Study on the role of inequality for the Paris Agreement
+description: "This showcase contains interactive figures for a MAgPIE-based study on the role of global inequality 
+for reaching the targets of the Paris agreement published in Nature Communications ([Humpenöder et al., 2022](https://doi.org/10.1038/s41467-022-35114-7)). "
+image: assets/images/showcases/lamaclima.jpg
 nav-menu: true
 show_tile: false
 published: true
