--- a/_showcases/lamaclimascenarios.html
+++ b/_showcases/lamaclimascenarios.html
@@ -2,7 +2,8 @@
 categories: showcases
 title: Study on the role of inequality for the Paris Agreement
 description: "This showcase contains interactive figures for a MAgPIE-based study on the role of global inequality 
-for reaching the targets of the Paris agreement published in Nature Communications ([Humpenöder et al., 2022](https://doi.org/10.1038/s41467-022-35114-7)). "
+for reaching the targets of the Paris agreement published in Nature Communications ([Humpenöder et al., 2022](https://doi.org/10.1038/s41467-022-35114-7)). 
+It highlights the critical importance of low- to middle-income countries when it comes to land related emission reductions."
 image: assets/images/showcases/lamaclima.jpg
 nav-menu: true
 show_tile: false
